--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,6 @@ dependencies {
     //noinspection GradleCompatible
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.android.gms:play-services-ads:17.1.0'
+//    implementation 'com.google.android.gms:play-services-ads:17.1.0'
     implementation('com.google.android.gms:play-services-location:16.0.0')
 }
