--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "28.0.3"
 
     defaultConfig {
-        applicationId "com.choubapp.muslimapp"
+        applicationId "id.mitsociety.muslimapp"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 2
