--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 2
-        versionName "1.2"
+        versionName "1.4-beta"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -49,4 +49,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 //    implementation 'com.google.android.gms:play-services-ads:17.1.0'
     implementation('com.google.android.gms:play-services-location:16.0.0')
+
+	implementation 'com.batoulapps.adhan:adhan:1.2.1'
+
+	implementation project(':itl')
 }
